--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
         <!-- https://mvnrepository.com/artifact/io.grpc/grpc-protobuf -->
         <grpc.version>1.51.3</grpc.version>
-       <!-- <protobuf.version>3.21.7</protobuf.version>-->
+        <protobuf.version>3.21.7</protobuf.version>
     </properties>
 
     <!-- 配置子模块 -->
